	if appropriate.  For example [10:3]=1 gets displayed also as [10:0]=8.

****	Fixed tempest files which start with phase b. [Steve Hoover]

****	Worked around a LessTif core dump when print menu appears.

****	Speedup when rereading large files with lots of deleted signals.

****    Fixed read followed by reread keep appending scope names. [George
	Varughese]

* Changes in Dinotrace 9.0f  9/29/1999

****	Allowed ' character in signals.  [Dominik Strasser]

****	Fixed a bug with vpd reading of vector length with #:#  [Dominik Strasser]

****	Fixed a bug which errored on "$timescale 10 ns"  (Space before units.)


* Changes in Dinotrace 9.0e  9/29/1999

****	Fixed a bug which would resize the screen incorrectly.

****	Fixed a postscript bug which would truncate the timestamps. [Rainer
	Mueller]

****	Latest LessTIF Fixed a bug which would omit cursor colors in scrollbar.

** Enhancements:

**	Signal Clear Highlight allows for unhighlighting all signals.

**	Signal Keep Highlight allows for deleting unhighlighted signals.

**	Customize Grid and grid_period allow placement of a grid on exactly
	each assertion, deassertion or both edges of a signal, rather then on
	a fixed time interval.

* Changes in Dinotrace 9.0d  11/30/1998

** Enhancements:

**	Signal Select now allows for deleting signals with X & Zs.

**	Signal Select now has two sorting functions.

***	Fixed bug with saving signal ordering and slow reread times. [Dan
	Lussier]

***	Added save_duplicates config command to avoid deleting verilog
	signals which occur many times.  [Dan Lussier]

***	Added hooks for linking other C programs to Dinotrace.  [Steve Hoover]

****	Fixed crash on Verilog Dumps.  [Lee Bradshaw]

****	Fixed crash with bad cursor X-11 error.  [Aki Niimura]

****	Fixed bug which would make Customize Grid ignore resolution setting.

* Changes in Dinotrace 9.0c  9/30/1998

** Enhancements:

****	Configures and builds on Windows NT.


* Changes in Dinotrace 9.0b  8/3/1998

** Enhancements:
